changed the url for Arun Jose

--- a/about.qmd
+++ b/about.qmd
@@ -60,7 +60,7 @@ We are the passionate team behind BLYSS, dedicated to fostering meaningful conne
 Arun is a visionary Master's student at TU Chemnitz and a member of the European Youth Parliament. With a background in technology and a passion for community building, Arun brings a unique perspective to the BLYSS project, bridging the gap between technological innovation and social impact.
 
 :::{.social-links}
-[LinkedIn](https://linkedin.com/in/arunjose) | [Twitter](https://twitter.com/arunjose)
+[LinkedIn](https://www.linkedin.com/in/arunjosegp/) 
 :::
 :::
 :::
