Added details of Matthias

--- a/about.qmd
+++ b/about.qmd
@@ -71,10 +71,15 @@ Arun is a visionary Master's student at TU Chemnitz and a member of the European
 :::{.member-info}
 ### Matthias
 
+My name is Matthias, and in daily life, I organize events and advocate for better working conditions for employees in and around Chemnitz. I want to create an environment around me where people from all walks of life enjoy living, working, and engaging with others.
+
+I have traveled extensively (e.g., to Berlin, Frankfurt, Dresden, Hamburg, and Munich) to gain experience for this goal. In the meantime, I believe that discussing relevant topics is the best way to connect with people and achieve shared goals.
+
+Being part of this podcast is, therefore, very important to me.
 
 
 :::{.social-links}
-[LinkedIn]() 
+[LinkedIn](https://www.linkedin.com/in/matthias-eulitz-264949281/) 
 :::
 :::
 :::
